# hms-agent

./: .gitignore  README.md  bookings.db  project_plan.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
scripts/: db_utils.py  populate_db.py
src/hms_agent/: agent.py  main.py  mcp_client.py  mcp_server.py  test_client.py  test_mcp_server.sh  voice_gateway.py
src/hms_agent/db/: connector.py  models.py
src/hms_agent/tests/: test_mcp_server.py  verify_tools.py
src/hms_agent/tools/: bookings.py  customers.py  hotels.py  locations.py  rooms.py
src/hms_agent/web/: script.js  style.css
tests/: test_main.py
