[project]
name = "hms_agent"
version = "0.1.0"
description = "A multi-agent hotel management system for managing bookings via WhatsApp and calls."
authors = [{ name = "Mohammad Ghufran", email = "emghufran@gmail.com" }]
dependencies = [
    "typer==0.21.1",
    "rich>=13.9.4",
    "SQLAlchemy==2.0.45",
    "tzdata==2025.3",
    "fastmcp>=2.14.2",
    "pydantic==2.11.7",
    "typing-extensions>=4.12.2",
    "Faker==40.1.0",
    "uvicorn>=0.40.0",
]
requires-python = "==3.13.2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "ruff==0.14.10",
    "pytest==9.0.2",
]

[project.scripts]
hms-agent = "hms_agent.main:app"

[tool.pytest.ini_options]
testpaths = ["src/hms_agent/tests"]
python_files = ["test_*.py", "*_test.py"]